# rsd

./: .gitignore  AUDIT.md  CORRECTNESS_PASS.md  Cargo.toml  DESIGN.md  DESIGN_CODEX_CRITIQUE.md  DESIGN_FABLE_REBUTTAL.md  DIVERGENCES.md  IMPLEMENTATION.md  README.md
.github/workflows/: ci.yml
app/: Package.swift
app/Sources/RSD/: API.swift  Activity.swift  Alerts.swift  Daemon.swift  RSDApp.swift  Summon.swift
crates/rsd-caes/: Cargo.toml
crates/rsd-caes/src/: lib.rs
crates/rsd-catalog/: Cargo.toml
crates/rsd-catalog/src/: lib.rs
crates/rsd-catalog/tests/: props.rs
crates/rsd-cli/: Cargo.toml
crates/rsd-cli/tests/: live_daemon.rs  mcp.rs  rsdfind.rs
crates/rsd-daemon/: Cargo.toml
crates/rsd-daemon/src/: commit.rs  connection_limit.rs  dispatch.rs  http.rs  ipc.rs  lib.rs  main.rs  ocr.rs  snippet.rs  transcribe.rs  wasm_source.rs
crates/rsd-daemon/tests/: content.rs  convergence.rs  crash.rs  live_ipc.rs  ocr.rs  perf.rs  search.rs  semantic.rs  sweep.rs  tokenization.rs  transcribe.rs
crates/rsd-extract/: Cargo.toml
crates/rsd-extract/src/: lib.rs  source.rs
crates/rsd-fsevents/: Cargo.toml
crates/rsd-fsevents/src/: lib.rs
crates/rsd-fsevents/tests/: live.rs
crates/rsd-ingest/: Cargo.toml
crates/rsd-ingest/src/: coalesce.rs  lib.rs  scan.rs
crates/rsd-ingest/tests/: reconcile.rs
crates/rsd-ipc/: Cargo.toml
crates/rsd-ipc/src/: lib.rs
crates/rsd-lexical/: Cargo.toml
crates/rsd-lexical/src/: lib.rs
crates/rsd-live/: Cargo.toml
crates/rsd-live/src/: lib.rs
crates/rsd-live/tests/: matcher.rs
crates/rsd-log/: Cargo.toml
crates/rsd-log/src/: lib.rs
crates/rsd-metrics/: Cargo.toml
crates/rsd-metrics/src/: lib.rs
crates/rsd-metrics/tests/: flood.rs
crates/rsd-ml/: Cargo.toml
crates/rsd-ml/src/: lib.rs  sidecar.rs
crates/rsd-ml/tests/: semantics.rs  sidecar.rs
crates/rsd-query/: Cargo.toml
crates/rsd-query/src/: lib.rs
crates/rsd-sandbox/: Cargo.toml
crates/rsd-sandbox/src/: lib.rs
crates/rsd-testkit/: Cargo.toml
crates/rsd-testkit/src/: lib.rs
crates/rsd-vector/: Cargo.toml
crates/rsd-vector/src/: lib.rs
crates/rsd-wasm/: Cargo.toml
crates/rsd-wasm/src/: lib.rs
crates/rsd-wasm/tests/: real_plugin.rs
crates/rsd-worker/: Cargo.toml
crates/rsd-worker/src/: lib.rs
crates/rsd-worker/tests/: pool.rs
embed/: Package.swift
embed/Sources/rsd-embed/: main.swift
ocr/: Package.swift
ocr/Sources/rsd-ocr/: main.swift
plugins/subtitles/: Cargo.toml
plugins/subtitles/src/: lib.rs
scripts/: build-app.sh  ci.sh  fetch-model.sh
transcribe/: Cargo.toml
transcribe/src/: main.rs
