[package]
name = "rsd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "rsdfind"

[lints]
workspace = true

[dependencies]
rsd-catalog = { workspace = true }
rsd-lexical = { workspace = true }
rsd-query = { workspace = true }
rsd-ipc = { workspace = true }
rsd-vector = { workspace = true }
rsd-ml = { workspace = true }
rsd-caes = { workspace = true }
rsd-extract = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# The client binaries are only meaningful against a running daemon, so the
# integration test stands one up. Dev-only: no cycle in the build graph.
rsd-daemon = { workspace = true }
rsd-ingest = { workspace = true }
rsd-live = { workspace = true }

[[bin]]
name = "rsdfind"
path = "src/bin/rsdfind.rs"

[[bin]]
name = "rsd-mcp"
path = "src/bin/rsd-mcp.rs"
