[package]
name = "rsd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "rsd-daemon"

[lints]
workspace = true

[dependencies]
rsd-catalog = { workspace = true }
rsd-ingest = { workspace = true }
rsd-fsevents = { workspace = true }
rsd-log = { workspace = true }
rsd-caes = { workspace = true }
rsd-extract = { workspace = true }
rsd-worker = { workspace = true }
rsd-lexical = { workspace = true }
rsd-live = { workspace = true }
rsd-vector = { workspace = true }
rsd-metrics = { workspace = true }
rsd-wasm = { workspace = true }
rsd-ml = { workspace = true }
rsd-ipc = { workspace = true }
rsd-query = { workspace = true }
nix = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
constant_time_eq = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rsd-testkit = { workspace = true }
rsd-query = { workspace = true }
rsd-lexical = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
