[package]
name = "rsd-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rsd-caes = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
encoding_rs = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
streaming-iterator = { workspace = true }
