[package]
name = "rsd-vector"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rsd-catalog = { workspace = true }
rsd-caes = { workspace = true }
rsd-extract = { workspace = true }
redb = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
